@@ -31,6 +31,7 @@
 #include <QGraphicsLinearLayout>
 #include <QGraphicsProxyWidget>
 #include <QLabel>
+#include <QTimer>
 
 RecentlyPlayedListWidget::RecentlyPlayedListWidget( QGraphicsWidget *parent )
     : Plasma::ScrollWidget( parent )
@@ -41,14 +42,66 @@ RecentlyPlayedListWidget::RecentlyPlayedListWidget( QGraphicsWidget *parent )
     setWidget( content );
 
     EngineController *ec = The::engineController();
-    m_currentTrack = ec->currentTrack();
     connect( ec, SIGNAL(trackChanged(Meta::TrackPtr)), SLOT(trackChanged(Meta::TrackPtr)) );
-    startQuery();
+    QTimer::singleShot( 0, this, SLOT(startQuery()) ); // let engine controller have time to initialize
 }
 
 RecentlyPlayedListWidget::~RecentlyPlayedListWidget()
 {
     clear();
+}
+
+void
+RecentlyPlayedListWidget::updateWidget()
+{
+    DEBUG_BLOCK
+    QFont font;
+    QFontMetricsF fm( font );
+    QMap<uint, Meta::TrackPtr> tracks = m_recentTracks;
+    m_recentTracks.clear();
+
+    foreach( const Meta::TrackPtr &track, tracks )
+    {
+        QString name = track->prettyName();
+
+        QString labelText;
+        Meta::ArtistPtr artist = track->artist();
+        if( artist && !artist->prettyName().isEmpty() )
+            labelText = QString( "%1 - %2" ).arg( artist->prettyName(), name );
+        else
+            labelText = name;
+
+        KSqueezedTextLabel *squeezer = new KSqueezedTextLabel( labelText );
+        squeezer->setTextElideMode( Qt::ElideRight );
+        squeezer->setAttribute( Qt::WA_NoSystemBackground );
+
+        QGraphicsProxyWidget *labelWidget = new QGraphicsProxyWidget( this );
+        labelWidget->setSizePolicy( QSizePolicy::Expanding, QSizePolicy::Preferred );
+        labelWidget->setWidget( squeezer );
+
+        QLabel *lastPlayed = new QLabel( Amarok::verboseTimeSince( track->lastPlayed() ) );
+        lastPlayed->setAttribute( Qt::WA_NoSystemBackground );
+        lastPlayed->setAlignment( Qt::AlignRight );
+        lastPlayed->setWordWrap( false );
+
+        QGraphicsProxyWidget *lastPlayedWidget = new QGraphicsProxyWidget( this );
+        lastPlayedWidget->setSizePolicy( QSizePolicy::Preferred, QSizePolicy::Preferred );
+        lastPlayedWidget->setWidget( lastPlayed );
+
+        Plasma::IconWidget *icon = new Plasma::IconWidget( this );
+        QSizeF iconSize = icon->sizeFromIconSize( fm.height() );
+        icon->setSizePolicy( QSizePolicy::Fixed, QSizePolicy::Fixed );
+        icon->setMinimumSize( iconSize );
+        icon->setMaximumSize( iconSize );
+        icon->setIcon( m_trackIcon );
+
+        QGraphicsLinearLayout *itemLayout = new QGraphicsLinearLayout( Qt::Horizontal );
+        itemLayout->setSizePolicy( QSizePolicy::Expanding, QSizePolicy::Expanding );
+        itemLayout->addItem( icon );
+        itemLayout->addItem( labelWidget );
+        itemLayout->addItem( lastPlayedWidget );
+        m_layout->insertItem( 0, itemLayout );
+    }
 }
 
 void
@@ -59,67 +112,18 @@ RecentlyPlayedListWidget::addTrack( const Meta::TrackPtr &track )
     if( !track->lastPlayed().isValid() )
         return;
 
-    const QString &name = track->prettyName();
-    if( name.isEmpty() )
-        return;
+    if( m_recentTracks.size() > 12 )
+        m_recentTracks.erase( m_recentTracks.begin() );
 
-    QFont font;
-    QFontMetricsF fm( font );
-
-    QString labelText;
-    Meta::ArtistPtr artist = track->artist();
-    if( artist && !artist->prettyName().isEmpty() )
-        labelText = QString( "%1 - %2" ).arg( artist->prettyName(), name );
-    else
-        labelText = name;
-
-    KSqueezedTextLabel *squeezer = new KSqueezedTextLabel( labelText );
-    squeezer->setTextElideMode( Qt::ElideRight );
-    squeezer->setAttribute( Qt::WA_NoSystemBackground );
-
-    QGraphicsProxyWidget *labelWidget = new QGraphicsProxyWidget( this );
-    labelWidget->setSizePolicy( QSizePolicy::Expanding, QSizePolicy::Preferred );
-    labelWidget->setWidget( squeezer );
-
-    QLabel *lastPlayed = new QLabel( Amarok::verboseTimeSince( track->lastPlayed() ) );
-    lastPlayed->setAttribute( Qt::WA_NoSystemBackground );
-    lastPlayed->setAlignment( Qt::AlignRight );
-    lastPlayed->setWordWrap( false );
-
-    QGraphicsProxyWidget *lastPlayedWidget = new QGraphicsProxyWidget( this );
-    lastPlayedWidget->setSizePolicy( QSizePolicy::Preferred, QSizePolicy::Preferred );
-    lastPlayedWidget->setWidget( lastPlayed );
-
-    Plasma::IconWidget *icon = new Plasma::IconWidget( this );
-    QSizeF iconSize = icon->sizeFromIconSize( fm.height() );
-    icon->setSizePolicy( QSizePolicy::Fixed, QSizePolicy::Fixed );
-    icon->setMinimumSize( iconSize );
-    icon->setMaximumSize( iconSize );
-    icon->setIcon( m_trackIcon );
-
-    QGraphicsLinearLayout *itemLayout = new QGraphicsLinearLayout( Qt::Horizontal );
-    itemLayout->setSizePolicy( QSizePolicy::Expanding, QSizePolicy::Expanding );
-    itemLayout->addItem( icon );
-    itemLayout->addItem( labelWidget );
-    itemLayout->addItem( lastPlayedWidget );
-
-    uint time = track->lastPlayed().toTime_t();
-    m_items.insertMulti( time, itemLayout );
-    int index = 0;
-    QMapIterator<uint, QGraphicsLayoutItem*> i( m_items );
-    while( i.hasNext() )
-    {
-        i.next();
-        if( i.key() == time )
-            break;
-        ++index;
-    }
-    m_layout->insertItem( m_layout->count() - index, itemLayout );
+    m_recentTracks.insert( track->lastPlayed().toTime_t(), track );
 }
 
 void
 RecentlyPlayedListWidget::startQuery()
 {
+    if( The::engineController()->isPlaying() )
+        return;
+
     DEBUG_BLOCK
     PERF_LOG( "Start query recently played tracks" );
     clear();
@@ -141,12 +145,31 @@ RecentlyPlayedListWidget::startQuery()
 void
 RecentlyPlayedListWidget::trackChanged( Meta::TrackPtr track )
 {
+    DEBUG_BLOCK
+    // engine controller will give a null track when playback stops
+    if( !track )
+    {
+        addTrack( m_currentTrack );
+        updateWidget();
+        return;
+    }
+
     // "track" is the new song being played, so it hasn't finished yet.
     if( track == m_currentTrack )
         return;
+
+    // a null m_current_track means playback just started for the first time
+    if( !m_currentTrack )
+    {
+        m_currentTrack = track;
+        return;
+    }
+
     addTrack( m_currentTrack );
     m_currentTrack = track;
-    removeLast();
+
+    if( !The::engineController()->isPlaying() )
+        updateWidget();
 }
 
 void
@@ -156,15 +179,14 @@ RecentlyPlayedListWidget::clear()
     int count = m_layout->count();
     while( --count >= 0 )
         removeItem( m_layout->itemAt( 0 ) );
-    m_items.clear();
-    m_currentTrack.clear();
     m_recentTracks.clear();
 }
 
 void
 RecentlyPlayedListWidget::tracksReturned( Meta::TrackList tracks )
 {
-    m_recentTracks << tracks;
+    foreach( const Meta::TrackPtr &track, tracks )
+        m_recentTracks.insert( track->lastPlayed().toTime_t(), track );
 }
 
 void
@@ -173,19 +195,10 @@ RecentlyPlayedListWidget::setupTracksData()
     DEBUG_BLOCK
     foreach( const Meta::TrackPtr &track, m_recentTracks )
         addTrack( track );
-    m_recentTracks.clear();
+
+    if( !The::engineController()->isPlaying() )
+        updateWidget();
     PERF_LOG( "Done setting up recently played tracks" );
-}
-
-void
-RecentlyPlayedListWidget::removeLast()
-{
-    if( m_items.isEmpty() )
-        return;
-
-    QGraphicsLayoutItem *item = m_items.begin().value();
-    m_items.erase( m_items.begin() );
-    removeItem( item );
 }
 
 void
